--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table >
+		<tr>
+			<th> Roll number</th>
+			<th> Name</th>
+		</tr>
+		<tr>
+			<td>123</td>
+			<td>Subhash</td>
+		</tr>
+		<tr>
+			<td>456</td>
+			<td>Raaj</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
