--- a/main.html
+++ b/main.html
@@ -9,18 +9,26 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table >
-		<tr>
-			<th> Roll number</th>
-			<th> Name</th>
-		</tr>
-		<tr>
-			<td>123</td>
-			<td>Subhash</td>
-		</tr>
-		<tr>
-			<td>456</td>
-			<td>Raaj</td>
-		</tr>
+		<thead>
+			<tr>
+				<th> Roll number</th>
+				<th> Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>123</td>
+				<td>Subhash</td>
+			</tr>
+			<tr>
+				<td>456</td>
+				<td>Raaj</td>
+			</tr>
+			<tr>
+				<td>789</td>
+				<td>Raj</td>
+			</tr>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
